Fixes main nav / event filter spacing, borders, buttons.

--- a/app/styles/components/filter-bar.less
+++ b/app/styles/components/filter-bar.less
@@ -1,8 +1,10 @@
 .FilterBar {
+  border-top: 0;
   margin: 0;
 }
 
 .FilterBar-collapse {
+  border-top: 1px solid @gray-lighter;
   padding-right: 0;
   padding-left: 0;
 }
@@ -20,7 +22,7 @@
 
 .FilterBar-button {
   width: 180px;
-  margin-top: 10px;
+  margin: 10px 0 0 0;
 }
 
 .FilterBar-button:nth-of-type(1) {
