--- a/app/styles/components/main-nav.less
+++ b/app/styles/components/main-nav.less
@@ -1,3 +1,7 @@
+.MainNav {
+  margin-bottom: 0;
+  border-bottom: 0;
+}
 .MainNav-brand {
   font-weight: 900;
   font-size: 18px;
